Project

General

Profile

Actions

Bug #16494

closed

S3 object versioning fails when applied on a non-master zone

Added by Shilpa MJ almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
rgw
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Bucket syncs to the master but versioning fails

From non-master zone:

2016-06-27 12:07:27.111065 7f17c8ff9700 20 sending request to http://magna115:8080/test-bucket/?versioning&rgwx-uid=testuser&rgwx-zonegroup=540c9b3f-5eb7-4a67-a581-54bc704ce827
2016-06-27 12:07:27.115883 7f17c8ff9700 10 receive_http_header
2016-06-27 12:07:27.115891 7f17c8ff9700 10 received header:HTTP/1.1 403 Forbidden
2016-06-27 12:07:27.115893 7f17c8ff9700 10 receive_http_header
2016-06-27 12:07:27.115894 7f17c8ff9700 10 received header:x-amz-request-id: tx000000000000000003195-00577116ff-110a-us-1
2016-06-27 12:07:27.115899 7f17c8ff9700 10 receive_http_header
2016-06-27 12:07:27.115914 7f17c8ff9700 10 received header:
2016-06-27 12:07:27.116007 7f17c8ff9700 20 executeforward_request_to_master returned ret=-13
2016-06-27 12:07:27.116015 7f17c8ff9700 2 req 7824:0.005259:s3:PUT /test-bucket/:set_bucket_versioning:completing
2016-06-27 12:07:27.116083 7f17c8ff9700 2 req 7824:0.005327:s3:PUT /test-bucket/:set_bucket_versioning:op status=-13
2016-06-27 12:07:27.116088 7f17c8ff9700 2 req 7824:0.005333:s3:PUT /test-bucket/:set_bucket_versioning:http status=403
2016-06-27 12:07:27.116091 7f17c8ff9700 1 ====== req done req=0x7f17c8ff3710 op status=-13 http_status=403 ======
2016-06-27 12:07:27.116102 7f17c8ff9700 20 process_request() returned -13

Logs from master zone:

/version-bucket/?versioning
2016-06-27 15:05:20.888992 7f034b7ee700 15 calculated digest=pWu4iwlC93IS0qxEbjJG8gMx3UM=
2016-06-27 15:05:20.888994 7f034b7ee700 15 auth_sign=MWGfx53Rnh2qtskf+ee2zLqPZFQ=
2016-06-27 15:05:20.888994 7f034b7ee700 15 compare=-35
2016-06-27 15:05:20.888996 7f034b7ee700 10 failed to authorize request
2016-06-27 15:05:20.888998 7f034b7ee700 20 handler->ERRORHANDLER: err_no=-2027 new_err_no=-2027
2016-06-27 15:05:20.889051 7f034b7ee700 2 req 488:0.000163:s3:PUT /version-bucket/:set_bucket_versioning:op status=0
2016-06-27 15:05:20.889057 7f034b7ee700 2 req 488:0.000169:s3:PUT /version-bucket/:set_bucket_versioning:http status=403
2016-06-27 15:05:20.889062 7f034b7ee700 1 ====== req done req=0x7f034b7e8710 op status=0 http_status=403 ======
2016-06-27 15:05:20.889069 7f034b7ee700 20 process_request() returned -2027

Bucket gets created:
2 req 487:0.113324:s3:PUT /version-bucket/:create_bucket:http status=200
2016-06-27 15:05:20.759948 7f034bfef700 1 ====== req done req=0x7f034bfe9710 op status=0 http_status=200 ======


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #17513: jewel: S3 object versioning fails when applied on a non-master zoneResolvedMatt BenjaminActions
Actions #1

Updated by Yehuda Sadeh almost 8 years ago

My guess is that we don't sign the forwarded request correctly (due to the 'versioning' param that needs to be handled differently).

Actions #2

Updated by Ken Dreyer almost 8 years ago

  • Status changed from New to Fix Under Review
  • Backport set to jewel
Actions #3

Updated by Ken Dreyer over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #17513: jewel: S3 object versioning fails when applied on a non-master zone added
Actions #5

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF