rgw: forward input data when forwarding set_bucket_version to master

Fixes: http://tracker.ceph.com/issues/16494

Needed to keep input data around to be forwarded correctly. Also, master
does not send any data back, so don't try to parse anything.

Signed-off-by: Yehuda Sadeh <yehuda@redhat.com>